--- a/src/Css/home.css
+++ b/src/Css/home.css
@@ -33,34 +33,28 @@
     font-family: Poppins-Bold;
     font-size: 40px;
     color: white;
-    animation: home-h1 .5s 1 forwards linear;
     white-space: pre;
 }
 
 .com-p{
     font-family: Poppins;
     color: antiquewhite;
-    animation: home-p .5s 1 forwards linear;
     background-image: linear-gradient(30deg, orange, aqua);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    text-align: justify;
 }
 
 .name{
     position: relative;
-    animation: home-p .5s 1 forwards linear;
 }
 
 .name:after{
     content: '';
     width: 100%;
     height: 5px;
-    /* background-color: #1e00ff; */
     background-image: linear-gradient(45deg, rgba(255, 166, 0, 0.7) 40%, rgba(0, 255, 0, 0.7));
-    /* background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;  */
     position: absolute;
     z-index: -1;
     top: 75%;
@@ -80,6 +74,14 @@
     filter: contrast(1) ;
 }
 
+.slideToLeft{
+    animation: slideToLeft .5s linear 1 forwards;
+}
+
+.slideToRight{
+    animation: slideToRight .5s linear 1 forwards;
+}
+
 /* all animations */
 
 @keyframes into {
@@ -93,7 +95,7 @@
     }
 }
 
-@keyframes home-h1 {
+@keyframes slideToRight {
     from{
         transform: translateX(-200px);
         opacity: .1;
@@ -104,7 +106,7 @@
     }
 }
 
-@keyframes home-p {
+@keyframes slideToLeft {
     from{
         transform: translateX(200px);
         opacity: .1;
